# name_hash_bruteforcer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows.bat
.github/workflows/: release.yaml
src/: dictionary.h  gpu.cpp  gpu.h  gpu_kernel.cpp  gpu_kernel.h  hash_string.cpp  hash_string.h  hashlittle2.cpp  hashlittle2.h  main.cpp  progress_bar.h  sstrhash.h  util.cpp  util.h
src/cl/: errors.cpp  errors.h  hashlittle2.cl  hashlittle2_nodict.cl  kernels.h  sstrhash.cl
test/: dictionary.txt  lookup1.csv  lookup2.csv  lookup3.csv  patterns.txt
